fix two bugs
Link bug with non-ASCII url
LinkFilter bug that doesn't checked redirect from url